@@ -105,6 +105,9 @@ log_newline_visible = 0
 /* Write more data when page is executing(1/0)(debug build only) */
 extended_native_memory_stats = 0
 
+/* Number of backtrace entries printed when thread crashes (0 to disable) */
+backtrace_len = 128
+
 [NHP compilation]
 /* cpp compiller command, default g++ */
 cppcmp = "g++"
